Fix ingredients spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ body h2 {
 }
 
 ul.ingredients {
-    width: 280px;
+    width: 300px;
     padding-left: 30px;
 }
 
